--- a/src/test/java/resources/application.yml
+++ b/src/test/java/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3307/sprinkle?useSSL=false
+    url: jdbc:mysql://127.0.0.1:3307/sprinkle-test?useSSL=false
     username: root
     password: mysql
   jpa:
