--- a/build.gradle
+++ b/build.gradle
@@ -23,10 +23,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-	
+
+	compile 'org.redisson:redisson-spring-data-24:3.14.0'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
-	
+
+	compile 'org.redisson:redisson:3.14.0'
+
 	runtimeOnly 'mysql:mysql-connector-java'
 	
 	annotationProcessor 'org.projectlombok:lombok'
