--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,10 @@ spring:
     url: jdbc:mysql://127.0.0.1:3307/sprinkle?useSSL=false
     username: root
     password: mysql
+  redis:
+    host: 127.0.0.1
+    port: 6379
+    password:
   jpa:
     hibernate:
       ddl-auto: update
